// Copyright 2023 Google. This software is provided as-is, without warranty or representation for any use or purpose.
// Your use of it is subject to your agreement with Google.
 
syntax = "proto2";
 
message IncidentData {
  optional int64 incident_id = 1;
  optional int64 inventory_id = 2;
  optional string incident_type = 3;
  optional string service_type = 4;
  optional string severity = 5;
  optional string status = 6;
  optional int64 open_datetime = 7;
  optional int64 close_datetime = 8;
  optional int64 update_at = 9;
  optional string _CHANGE_TYPE = 10;
}
